[gd_scene load_steps=4 format=3 uid="uid://0x1fkar36bkx"]

[ext_resource type="Script" uid="uid://peqvsdoswhbg" path="res://menu/main.gd" id="1_6vb77"]
[ext_resource type="Texture2D" uid="uid://brdfm8hrhy1v0" path="res://menu/Background.png" id="2_dcm1j"]
[ext_resource type="AudioStream" uid="uid://gvxbpaccrdmi" path="res://sound/Music/Goblins_Den__Regular_.mp3" id="3_2cxiq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vb77")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.226707, 0.226707, 0.226707, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dcm1j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2cxiq")
autoplay = true
parameters/looping = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -149.0
offset_right = 158.5
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Play
"

[node name="Options" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="Credits" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Credits
"

[node name="Exit" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
